Create and link js file

--- a/album.html
+++ b/album.html
@@ -60,6 +60,6 @@
             </table>
             
          </main>
-        
+         <script src="scripts/album.js"></script>
     </body>
 </html>
