--- a/album.html
+++ b/album.html
@@ -51,6 +51,17 @@
                     </a>
                 </div>
                 <div class="control-group currently-playing">
+                    <h2 class="song-name">My song name</h2>
+                    <div class="seek-control">
+                        <div class="seek-bar">
+                            <div class="fill"></div>
+                            <div class="thumb"></div>
+                        </div>
+                        <div class="current-time">4:20</div>
+                        <div class="total-time">5:00</div>
+                    </div>
+                    <h2 class="artist-song-mobile">My song name - Artist name</h2>
+                    <h3 class="artist-name">Artist name</h3>
                 </div>
                 <div class="control-group volume">
                 </div>
