--- a/album.html
+++ b/album.html
@@ -75,5 +75,6 @@
         
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
         <script src="scripts/album.js"></script>
+        <script src="scripts/fixture.js"></script>
     </body>
 </html>
