--- a/album.html
+++ b/album.html
@@ -74,7 +74,8 @@
         </section>
         
         <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script src="scripts/album.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
         <script src="scripts/fixture.js"></script>
+        <script src="scripts/album.js"></script>
     </body>
 </html>
