--- a/album.html
+++ b/album.html
@@ -3,8 +3,8 @@
     <head>
         <title>Bloc Jams</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
-        <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="styles/fonts.css">
+        <link rel="stylesheet" type="text/css" href="styles/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/album.css">
@@ -73,7 +73,7 @@
             </div>
         </section>
 
-        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src='scripts/jquery.min.js'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
         <script src="scripts/fixture.js"></script>
         <script src="scripts/album.js"></script>
