--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Bloc Jams</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href='https://fonts.googleapis.com/css?family=Roboto:300,500' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="styles/fonts.css">
+        <link rel="stylesheet" type="text/css" href="styles/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/landing.css">
@@ -41,7 +41,7 @@
                 <p class="point-description">Listen to your music on the go. This streaming service is availableon all mobile platforms.</p>
             </div>
         </section>
-        <script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
+        <script src='scripts/jquery.min.js'></script>
         <script src="scripts/landing.js"></script>
     </body>
 </html>
